[metadata]
name = fmclient
version = 1.0.0
summary = A python client library for Fault Management  
#description-file =
#    README.rst
#author = OpenStack
#author-email = openstack-dev@lists.openstack.org
#home-page = https://docs.openstack.org/nova/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    fmclient

[entry_points]
console_scripts =
    fm = fmclient.shell:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

